@@ -4,6 +4,12 @@ Changelog
 1.0b24 - Unreleased
 -------------------
 
+* Added a new config option ``auto_commit`` which is enabled by default. You
+  can disable this, which avoids any explicit commit messages to be sent to
+  the Solr server by the client. You have to configure commit policies on
+  the server side instead.
+  [hannosch]
+
 * Added support for a special query key ``use_solr`` which forces queries to
   be sent to Solr even though none of the required keys match. This can be
   used to sent individual catalog queries to Solr.
